--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
         run: az config set extension.use_dynamic_install=yes_without_prompt
 
       - name: Attach workspace
-        run: az ml folder attach -w "ml-ws" -g "practical-mlops"
+        run: az extension add -n ml && az ml folder attach -w "ml-ws" -g "practical-mlops"
 
       - name: Retrieve the model
-        run: az extension add -n ml && az ml model download -t "." --model-id "robertasequence:1"
+        run:  az ml model download -t "." --model-id "robertasequence:1"
 
       - name: Build flask-app container
         uses: docker/build-push-action@v2
