--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,7 @@ jobs:
         run: az config set extension.use_dynamic_install=yes_without_prompt
 
       - name: Attach workspace
-        run: az ml job create --file ./path/to/your/job.yml \
-                     --workspace-name "ml-ws" \
-                     --resource-group "practical-mlops"
+        run: az ml configure --set defaults.workspace="ml-ws" defaults.group="practical-mlops"
 
       - name: Retrieve the model
         run:  az ml model download -t "." --model-id "robertasequence:1"
