--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           context: ./
           file: ./Dockerfile
-          push: false
+          push: true
           tags: alfredodeza/flask-roberta:latest
       - name: Authenticate to Docker hub
         uses: docker/login-action@v1
