--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,17 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+         registry: ghcr.io
+         username: ${{ github.repository_owner }}
+         password: ${{ secrets.GH_REGISTRY }}
+      - name: build flask-app and push to registry
+        uses: docker/build-push-action@v2
+        with:
+         context: ./
+         tags: ghcr.io/alfredodeza/flask-roberta:latest
+         push: true
+
 
