--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,17 +32,29 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: alfredodeza/flask-roberta:latest
+          
+      - name: Log out from Docker Hub
+        run: docker logout
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          
       - name: Authenticate to Docker hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
          registry: ghcr.io
          username: ${{ github.repository_owner }}
          password: ${{ secrets.GH_REGISTRY }}
+         
       - name: build flask-app and push to registry
         uses: docker/build-push-action@v2
         with:
