--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           context: ./
           file: ./Dockerfile
-          push: true
+          push: false
           tags: alfredodeza/flask-roberta:latest
           
       - name: Log out from Docker Hub
